# gcpwn

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
gcpwn/: __main__.py
gcpwn/cli/: main.py  module_actions.py  workspace_instructions.py
gcpwn/core/: action_schema.py  config.py  console.py  contracts.py  db.py  output_paths.py  session.py
gcpwn/core/utils/: action_recording.py  iam_permissions.py  iam_simplifier.py  module_helpers.py  persistence.py  serialization.py  service_runtime.py
gcpwn/mappings/: database_info.json  module-mappings.json  og_permission_to_roles_map.json  og_privilege_escalation_paths.json  og_service_agent_patterns.json
gcpwn/modules/agentplatform/enumeration/: enum_agentplatform.py
gcpwn/modules/agentplatform/utilities/: helpers.py
gcpwn/modules/apigateway/enumeration/: enum_apigateway.py
gcpwn/modules/batch/utilities/: helpers.py
scripts/: build_predefined_perm_to_roles.sh  get_all_unique_permissions.sh
tests/module_contracts/: test_module_contracts.py  test_no_service_iam_enum_modules.py
tests/unit/: README.md  conftest.py
tests/unit/core/: test_key_action_recording.py  test_key_module_helpers.py
tests/unit/everything/: test_key_exploit_setiampolicy.py  test_key_iam_policy_bindings.py
tests/unit/opengraph/: test_key_core_helpers.py  test_key_custom_nodes_push.py  test_key_graph_output_examples.py  test_key_iam_combo_paths.py  test_key_multi_rule_variants.py  test_key_permission_map_coverage.py  test_key_resource_resourcedata.py
(+93 files in other folders)
