[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "gcpwn"
version = "0.5.0"
description = "GCP offensive assessment and enumeration framework."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
  { name = "NetSPI" }
]
dynamic = ["dependencies"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
table = [
  "prettytable==3.17.0"
]

[project.scripts]
gcpwn = "gcpwn.cli.main:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"gcpwn" = [
  "mappings/*.json",
  "mappings/*.txt",
  "modules/*/utilities/data/*.txt",
  "modules/*/utilities/data/*.zip",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gcpwn*"]
namespaces = true
